add Gatling simulation for http injection